# roboticmecanumwheels

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
launch/: lidar.launch  map_navigation.launch  navigation.launch  realsense.launch  rviz.launch  slam.launch
scripts/: mecanum_cmd_serial.py
