<?xml version="1.0"?>
<package format="2">
  <name>mecanum_bot</name>
  <version>0.0.1</version>
  <description>Omnidirectional mecanum wheel robot with full ROS navigation stack</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>move_base</depend>
</package>
